--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "php": "^7.3",
         "walkerchiu/php-core-int": "^1.0"
     },
+    "require-dev": {
+        "doctrine/dbal": "^2.5"
+    },
     "suggest": {
         "walkerchiu/php-currency-int": "^1.0",
         "walkerchiu/php-morph-address-int": "^1.0",
